apps/ai/ollama/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama
  namespace: ollama
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollama
  template:
    metadata:
      labels:
        app: ollama
    spec:
      runtimeClassName: nvidia
      containers:
        - name: ollama
          image: ollama/ollama:0.5.2
          ports:
            - containerPort: 11434
          resources:
            requests:
              cpu: 4000m
              memory: 16Gi
            limits:
              cpu: 8000m
              memory: 38Gi
              nvidia.com/gpu: 2
          securityContext:
            privileged: true
          volumeMounts:
            - name: models
              mountPath: /root/.ollama
            - name: config
              mountPath: /root/.ollama/ollama.json
              subPath: ollama.json
            - name: nvidia-driver
              mountPath: /usr/local/nvidia
              readOnly: true
      volumes:
        - name: models
          persistentVolumeClaim:
            claimName: ollama-models
        - name: config
          configMap:
            name: ollama-configmap
        - name: nvidia-driver
          hostPath:
            path: /usr/local/nvidia
      nodeSelector:
         nvidia.com/gpu.present: "true"
