apps/ai/ollama/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama
  namespace: ollama
  labels:
    app: ollama
spec:
  selector:
    app: ollama
  ports:
    - name: http
      port: 18188
      targetPort: 18188
  type: ClusterIP
