apps/ai/ollama/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ollama
  namespace: ollama
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - "ollama.vanillax.me"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ollama
          port: 18188
